test/negative/quantifierAndDefaultSome.cfr
A ?
B ?

// should issue a type error that no cannot be applied to expression Bool
[ no (A && B) ]
